<resources>
    <string name="app_name">Chatty</string>
    <string name="welcome">С возвращением!</string>
    <string name="loginInForResult">Войдите чтобы продолжить</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="signIn">Войти</string>
    <string name="createAccount">Создать аккаунт</string>
    <string name="createNewAccount">Регистрация</string>
    <string name="name">Имя</string>
    <string name="confirmPassword">Подтверждение пароля</string>
    <string name="register">Зарегестрироваться</string>
    <string name="loginIn">Войти в аккаунт</string>
    <string name="select_user">Выберите пользователя</string>
    <string name="type_a_message">Введите сообщение</string>
    <string name="search">Поиск</string>
    <string name="stats">Статус</string>
</resources>