<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:background="@drawable/background"
    tools:context=".ProfileActivity">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp">

            <ImageButton
                android:id="@+id/btnBackProfile"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/ic_back"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginStart="@dimen/_4sdp"
                android:backgroundTint="@color/forTxt"/>

        </LinearLayout>


        <ImageView
            android:id="@+id/imgInProfile"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:background="@drawable/background_icon"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/nameInProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/forTxt"
            android:textSize="@dimen/_25sdp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/emailInProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/_25sdp"
            android:textColor="@color/forTxt"
            android:text="@string/email"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"/>

        <TextView
            android:id="@+id/statusInProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stats"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/forTxt"
            android:textSize="@dimen/_25sdp"
            android:textStyle="bold"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>